# vlc

doc/libvlc/: win_player.c
modules/video_output/: Makefile.am
modules/video_output/opengl/: Makefile.am
